# imswitch-arkitekt

./: README.md  setup.cfg  tox.ini
src/imswitch_arkitekt/: __init__.py  imswitch.yaml  imswitch_arkitekt_controller.py  imswitch_arkitekt_info.py  imswitch_arkitekt_manager.py  imswitch_arkitekt_widget.py
src/imswitch_arkitekt/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
